...
                        }
                    }
                    AnimatedVisibility(
                        visible = selectedTrack != null,
                        enter = slideInVertically(initialOffsetY = { fullHeight -> fullHeight })
                    ) {
                        BottomPlayerTab(selectedTrack!!, playerEvents, onBottomTabClick)
                    }
                }
            }
        }
    }
}
